--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,16 +2,16 @@ name: Build and Deploy Documentation
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
     paths:
-      - 'dialogue-guardian/docs/**'
-      - 'dialogue-guardian/src/**'
-      - '.github/workflows/docs.yml'
+      - "dialogue-guardian/docs/**"
+      - "dialogue-guardian/src/**"
+      - ".github/workflows/docs.yml"
   pull_request:
-    branches: [ main, master ]
+    branches: [main, master]
     paths:
-      - 'dialogue-guardian/docs/**'
-      - 'dialogue-guardian/src/**'
+      - "dialogue-guardian/docs/**"
+      - "dialogue-guardian/src/**"
   workflow_dispatch:
 
 permissions:
@@ -22,48 +22,60 @@ permissions:
 jobs:
   build-docs:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-    
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        cd dialogue-guardian
-        pip install -e .
-        pip install -r dev-requirements.txt
-    
-    - name: Build documentation
-      run: |
-        cd dialogue-guardian/docs
-        make html
-    
-    - name: Upload documentation artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: documentation
-        path: dialogue-guardian/docs/_build/html/
-    
-    - name: Setup Pages
-      if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
-      uses: actions/configure-pages@v4
-    
-    - name: Upload to GitHub Pages
-      if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
-      uses: actions/upload-pages-artifact@v3
-      with:
-        path: dialogue-guardian/docs/_build/html/
-    
-    - name: Deploy to GitHub Pages
-      if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
-      id: deployment
-      uses: actions/deploy-pages@v4
+      - uses: actions/checkout@v5
+
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.11"
+
+      - name: Get pip cache directory
+        id: pip-cache
+        run: echo "PIP_CACHE_DIR=$(pip cache dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.pip-cache.outputs.PIP_CACHE_DIR }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('dialogue-guardian/dev-requirements.txt') }}-${{ hashFiles('dialogue-guardian/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          cd dialogue-guardian
+          pip install -e .
+          pip install -r dev-requirements.txt
+
+      - name: Build documentation
+        run: |
+          cd dialogue-guardian/docs
+          make html
+
+      - name: Upload documentation artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: documentation
+          path: dialogue-guardian/docs/_build/html/
+
+  pages:
+    runs-on: ubuntu-latest
+    needs: build-docs
+    steps:
+      - name: Setup Pages
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+        uses: actions/configure-pages@v5
+
+      - name: Upload to GitHub Pages
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+        uses: actions/upload-pages-artifact@v4
+        with:
+          path: dialogue-guardian/docs/_build/html/
+
+      - name: Deploy to GitHub Pages
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+        id: deployment
+        uses: actions/deploy-pages@v4
