--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,13 +5,13 @@ on:
     types: [published]
   push:
     tags:
-      - 'v*'
+      - "v*"
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Choose target environment'
+        description: "Choose target environment"
         required: true
-        default: 'testpypi'
+        default: "testpypi"
         type: choice
         options:
           - testpypi
@@ -20,75 +20,87 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: 
+    environment:
       name: pypi
       url: https://pypi.org/project/dialogue-guardian/
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Debug workflow trigger
-      run: |
-        echo "Event name: ${{ github.event_name }}"
-        echo "Ref: ${{ github.ref }}"
-        echo "Repository: ${{ github.repository }}"
-        echo "Manual environment choice: ${{ github.event.inputs.environment || 'not manual' }}"
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    
-    - name: Install build dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build twine
-    
-    - name: Build package
-      run: |
-        cd dialogue-guardian
-        python -m build
-    
-    - name: Check package
-      run: |
-        cd dialogue-guardian
-        twine check dist/*
-    
-    - name: Upload to Test PyPI
-      if: |
-        (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) ||
-        (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'testpypi')
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
-      run: |
-        cd dialogue-guardian
-        echo "Publishing to Test PyPI..."
-        if [ -z "${{ secrets.TEST_PYPI_API_TOKEN }}" ]; then
-          echo "WARNING: TEST_PYPI_API_TOKEN secret is not set!"
-          echo "Skipping Test PyPI upload."
-          exit 0
-        fi
-        twine upload --repository testpypi dist/*
-      continue-on-error: true
-    
-    - name: Upload to PyPI
-      if: |
-        (github.event_name == 'release') ||
-        (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'pypi')
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-      run: |
-        cd dialogue-guardian
-        echo "Publishing to PyPI..."
-        echo "Event: ${{ github.event_name }}"
-        echo "Ref: ${{ github.ref }}"
-        if [ -z "${{ secrets.PYPI_API_TOKEN }}" ]; then
-          echo "ERROR: PYPI_API_TOKEN secret is not set!"
-          echo "Please add your PyPI API token as a repository secret."
-          exit 1
-        fi
-        twine upload dist/*
+      - uses: actions/checkout@v4
+
+      - name: Debug workflow trigger
+        run: |
+          echo "Event name: ${{ github.event_name }}"
+          echo "Ref: ${{ github.ref }}"
+          echo "Repository: ${{ github.repository }}"
+          echo "Manual environment choice: ${{ github.event.inputs.environment || 'not manual' }}"
+
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.11"
+
+      - name: Get pip cache directory
+        id: pip-cache
+        run: echo "PIP_CACHE_DIR=$(pip cache dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.pip-cache.outputs.PIP_CACHE_DIR }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('dialogue-guardian/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build twine
+
+      - name: Build package
+        run: |
+          cd dialogue-guardian
+          python -m build
+
+      - name: Check package
+        run: |
+          cd dialogue-guardian
+          twine check dist/*
+
+      - name: Upload to Test PyPI
+        if: |
+          (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) ||
+          (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'testpypi')
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        run: |
+          cd dialogue-guardian
+          echo "Publishing to Test PyPI..."
+          if [ -z "${{ secrets.TEST_PYPI_API_TOKEN }}" ]; then
+            echo "WARNING: TEST_PYPI_API_TOKEN secret is not set!"
+            echo "Skipping Test PyPI upload."
+            exit 0
+          fi
+          twine upload --repository testpypi dist/*
+        continue-on-error: true
+
+      - name: Upload to PyPI
+        if: |
+          (github.event_name == 'release') ||
+          (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'pypi')
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        run: |
+          cd dialogue-guardian
+          echo "Publishing to PyPI..."
+          echo "Event: ${{ github.event_name }}"
+          echo "Ref: ${{ github.ref }}"
+          if [ -z "${{ secrets.PYPI_API_TOKEN }}" ]; then
+            echo "ERROR: PYPI_API_TOKEN secret is not set!"
+            echo "Please add your PyPI API token as a repository secret."
+            exit 1
+          fi
+          twine upload dist/*
 
   test-install:
     needs: build
@@ -96,38 +108,50 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.12']
-    
+        python-version: ["3.8", "3.12"]
+
     steps:
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Install FFmpeg (Ubuntu)
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y ffmpeg
-    
-    - name: Install FFmpeg (macOS)
-      if: matrix.os == 'macos-latest'
-      run: |
-        brew install ffmpeg
-    
-    - name: Install FFmpeg (Windows)
-      if: matrix.os == 'windows-latest'
-      run: |
-        choco install ffmpeg
-    
-    - name: Test installation from PyPI
-      if: github.event_name == 'release'
-      run: |
-        pip install dialogue-guardian
-        guardian --help
-    
-    - name: Test installation from Test PyPI
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
-      run: |
-        pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ dialogue-guardian
-        guardian --help
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v6
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Get pip cache directory
+        id: pip-cache
+        run: echo "PIP_CACHE_DIR=$(pip cache dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.pip-cache.outputs.PIP_CACHE_DIR }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('dialogue-guardian/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install FFmpeg (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
+
+      - name: Install FFmpeg (macOS)
+        if: matrix.os == 'macos-latest'
+        run: |
+          brew install ffmpeg
+
+      - name: Install FFmpeg (Windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          choco install ffmpeg
+
+      - name: Test installation from PyPI
+        if: github.event_name == 'release'
+        run: |
+          pip install dialogue-guardian
+          guardian --help
+
+      - name: Test installation from Test PyPI
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+        run: |
+          pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ dialogue-guardian
+          guardian --help
