--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -2,54 +2,66 @@ name: Security Scan
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
   pull_request:
-    branches: [ main ]
+    branches: [main]
   schedule:
-    - cron: '0 2 * * 1'  # Weekly on Monday at 2 AM UTC
+    - cron: "0 2 * * 1" # Weekly on Monday at 2 AM UTC
 
 jobs:
   security-scan:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install bandit safety semgrep
-        cd dialogue-guardian
-        pip install -e .
-    
-    - name: Run Bandit security scan
-      run: |
-        cd dialogue-guardian
-        bandit -r src/guardian/ -f json -o bandit-report.json || echo "No security issues found"
-    
-    - name: Run Safety dependency check
-      run: |
-        cd dialogue-guardian
-        safety check --output json > safety-report.json || echo "No safety issues found"
-    
-    - name: Run Semgrep security scan
-      run: |
-        cd dialogue-guardian
-        semgrep --config=auto src/guardian/ --json --output=semgrep-report.json || echo "No security issues found"
-    
-    - name: Upload security reports
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: security-reports
-        path: |
-          dialogue-guardian/bandit-report.json
-          dialogue-guardian/safety-report.json
-          dialogue-guardian/semgrep-report.json
+      - uses: actions/checkout@v5
+
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.11"
+
+      - name: Get pip cache directory
+        id: pip-cache
+        run: echo "PIP_CACHE_DIR=$(pip cache dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.pip-cache.outputs.PIP_CACHE_DIR }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('dialogue-guardian/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install bandit safety semgrep
+          cd dialogue-guardian
+          pip install -e .
+
+      - name: Run Bandit security scan
+        run: |
+          cd dialogue-guardian
+          bandit -r src/guardian/ -f json -o bandit-report.json || echo "No security issues found"
+
+      - name: Run Safety dependency check
+        run: |
+          cd dialogue-guardian
+          safety check --output json > safety-report.json || echo "No safety issues found"
+
+      - name: Run Semgrep security scan
+        run: |
+          cd dialogue-guardian
+          semgrep --config=auto src/guardian/ --json --output=semgrep-report.json || echo "No security issues found"
+
+      - name: Upload security reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: security-reports
+          path: |
+            dialogue-guardian/bandit-report.json
+            dialogue-guardian/safety-report.json
+            dialogue-guardian/semgrep-report.json
 
   codeql:
     name: CodeQL Analysis
@@ -58,35 +70,47 @@ jobs:
       actions: read
       contents: read
       security-events: write
-    
+
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'python' ]
-    
+        language: ["python"]
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-    
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
-      with:
-        languages: ${{ matrix.language }}
-    
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v3
-    
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
-      with:
-        category: "/language:${{matrix.language}}"
+      - name: Checkout repository
+        uses: actions/checkout@v5
+
+      - name: Get pip cache directory
+        id: pip-cache
+        run: echo "PIP_CACHE_DIR=$(pip cache dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.pip-cache.outputs.PIP_CACHE_DIR }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('dialogue-guardian/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: ${{ matrix.language }}
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:${{matrix.language}}"
 
   dependency-review:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
-    
-    - name: Dependency Review
-      uses: actions/dependency-review-action@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v5
+
+      - name: Dependency Review
+        uses: actions/dependency-review-action@v4
